Added anonymous volume for node_modules

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     build: .
     volumes:
     - .:/usr/src/app
+    - /usr/src/app/node_modules
     entrypoint: dockerize -wait tcp://db:3306 -timeout 60s node server.js
     networks:
       - db-net
